# CustomerChurnPrediction

./: CustomerChurnPrediction.ipynb  README.md  app.py  pyproject.toml  requirements.txt
models/: catboost_model.pkl  lightgbm_model.pkl  xgboost_model.pkl
