[project]
name = "churn-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.58.0",
    "xgboost==2.1.1",
]
